Assignment1/assignment1/initial/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from /media/tuanminh/DATA/Tuan_Minh/HK201/PPL/BKIT/Assignment1/assignment1/initial/src/main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "'Body'", "'Break'", "'Continue'", 
                     "'Do'", "'Else'", "'ElseIf'", "'EndBody'", "'EndIf'", 
                     "'EndFor'", "'EndWhile'", "'For'", "'Function'", "'If'", 
                     "'Parameter'", "'Return'", "'Then'", "'Var'", "'While'", 
                     "'True'", "'False'", "'EndDo'", "'+'", "'+.'", "'-'", 
                     "'-.'", "'*'", "'*.'", "'\\'", "'\\.'", "'%'", "'!'", 
                     "'&&'", "'||'", "'=='", "'!='", "'<'", "'>'", "'<='", 
                     "'>='", "'=/='", "'<.'", "'>.'", "'<=.'", "'>=.'", 
                     "'='", "'('", "')'", "'{'", "'}'", "'['", "']'", "':'", 
                     "'.'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "BODY", "BREAK", "CONTINUE", 
                      "DO", "ELSE", "ELSEIF", "ENDBODY", "ENDIF", "ENDFOR", 
                      "ENDWHILE", "FOR", "FUNCTION", "IF", "PARAMETER", 
                      "RETURN", "THEN", "VAR", "WHILE", "TRUE", "FALSE", 
                      "ENDDO", "PLUS", "FLOAT_PLUS", "MINUS", "FLOAT_MINUS", 
                      "MUL", "FLOAT_MUL", "DIV", "FLOAT_DIV", "MOD", "NOT", 
                      "AND", "OR", "EQ", "NOT_EQ", "LESS", "GREATER", "LESS_EQ", 
                      "GREATER_EQ", "FLOAT_NOT_EQ", "FLOAT_LESS", "FLOAT_GREATER", 
                      "FLOAT_LESS_EQ", "FLOAT_GREATER_EQ", "ASSIGN", "LP", 
                      "RP", "LB", "RB", "LSB", "RSB", "COLON", "DOT", "COMMA", 
                      "SEMI", "ID", "COMMENT", "WS", "INT_LIT", "FLOAT_LIT", 
                      "BOOL_LIT", "STRING_LIT", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_many_declars = 1
    RULE_global_var_declar_lst = 2
    RULE_many_var_decl = 3
    RULE_var_decl = 4
    RULE_var_lst = 5
    RULE_many_var = 6
    RULE_var = 7
    RULE_composite_var = 8
    RULE_dimension_lst = 9
    RULE_many_dimension = 10
    RULE_dimension = 11
    RULE_func_declar_lst = 12
    RULE_many_func_decl = 13
    RULE_func_decl = 14
    RULE_func_name = 15
    RULE_func_param = 16
    RULE_param_lst = 17
    RULE_many_params = 18
    RULE_param = 19
    RULE_body = 20
    RULE_stmt_lst = 21
    RULE_many_stmts = 22
    RULE_main_func = 23
    RULE_expr = 24
    RULE_operand_1 = 25
    RULE_operand_2 = 26
    RULE_operand_3 = 27
    RULE_operand_4 = 28
    RULE_operand_5 = 29
    RULE_operand_6 = 30
    RULE_index_ops = 31
    RULE_operand_7 = 32
    RULE_argument_lst = 33
    RULE_many_arguments = 34
    RULE_argument = 35
    RULE_stmt = 36
    RULE_assign_stmt = 37
    RULE_if_stmt = 38
    RULE_elseif_stmt_lst = 39
    RULE_many_elseif_stmts = 40
    RULE_elseif_stmt = 41
    RULE_else_stmt = 42
    RULE_for_stmt = 43
    RULE_while_stmt = 44
    RULE_do_while_stmt = 45
    RULE_break_stmt = 46
    RULE_continue_stmt = 47
    RULE_call_stmt = 48
    RULE_expr_lst = 49
    RULE_many_exprs = 50
    RULE_return_stmt = 51
    RULE_lit = 52
    RULE_array_lit = 53
    RULE_lit_list = 54
    RULE_many_lits = 55

    ruleNames =  [ "program", "many_declars", "global_var_declar_lst", "many_var_decl", 
                   "var_decl", "var_lst", "many_var", "var", "composite_var", 
                   "dimension_lst", "many_dimension", "dimension", "func_declar_lst", 
                   "many_func_decl", "func_decl", "func_name", "func_param", 
                   "param_lst", "many_params", "param", "body", "stmt_lst", 
                   "many_stmts", "main_func", "expr", "operand_1", "operand_2", 
                   "operand_3", "operand_4", "operand_5", "operand_6", "index_ops", 
                   "operand_7", "argument_lst", "many_arguments", "argument", 
                   "stmt", "assign_stmt", "if_stmt", "elseif_stmt_lst", 
                   "many_elseif_stmts", "elseif_stmt", "else_stmt", "for_stmt", 
                   "while_stmt", "do_while_stmt", "break_stmt", "continue_stmt", 
                   "call_stmt", "expr_lst", "many_exprs", "return_stmt", 
                   "lit", "array_lit", "lit_list", "many_lits" ]

    EOF = Token.EOF
    T__0=1
    BODY=2
    BREAK=3
    CONTINUE=4
    DO=5
    ELSE=6
    ELSEIF=7
    ENDBODY=8
    ENDIF=9
    ENDFOR=10
    ENDWHILE=11
    FOR=12
    FUNCTION=13
    IF=14
    PARAMETER=15
    RETURN=16
    THEN=17
    VAR=18
    WHILE=19
    TRUE=20
    FALSE=21
    ENDDO=22
    PLUS=23
    FLOAT_PLUS=24
    MINUS=25
    FLOAT_MINUS=26
    MUL=27
    FLOAT_MUL=28
    DIV=29
    FLOAT_DIV=30
    MOD=31
    NOT=32
    AND=33
    OR=34
    EQ=35
    NOT_EQ=36
    LESS=37
    GREATER=38
    LESS_EQ=39
    GREATER_EQ=40
    FLOAT_NOT_EQ=41
    FLOAT_LESS=42
    FLOAT_GREATER=43
    FLOAT_LESS_EQ=44
    FLOAT_GREATER_EQ=45
    ASSIGN=46
    LP=47
    RP=48
    LB=49
    RB=50
    LSB=51
    RSB=52
    COLON=53
    DOT=54
    COMMA=55
    SEMI=56
    ID=57
    COMMENT=58
    WS=59
    INT_LIT=60
    FLOAT_LIT=61
    BOOL_LIT=62
    STRING_LIT=63
    ERROR_CHAR=64
    UNCLOSE_STRING=65
    ILLEGAL_ESCAPE=66
    UNTERMINATED_COMMENT=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def many_declars(self):
            return self.getTypedRuleContext(BKITParser.Many_declarsContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.many_declars()
            self.state = 113
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_declarsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def global_var_declar_lst(self):
            return self.getTypedRuleContext(BKITParser.Global_var_declar_lstContext,0)


        def func_declar_lst(self):
            return self.getTypedRuleContext(BKITParser.Func_declar_lstContext,0)


        def main_func(self):
            return self.getTypedRuleContext(BKITParser.Main_funcContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_many_declars




    def many_declars(self):

        localctx = BKITParser.Many_declarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_many_declars)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.global_var_declar_lst()
            self.state = 116
            self.func_declar_lst()
            self.state = 117
            self.main_func()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Global_var_declar_lstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(BKITParser.Var_declContext,0)


        def many_var_decl(self):
            return self.getTypedRuleContext(BKITParser.Many_var_declContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_global_var_declar_lst




    def global_var_declar_lst(self):

        localctx = BKITParser.Global_var_declar_lstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_global_var_declar_lst)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.var_decl()
                self.state = 120
                self.many_var_decl()
                pass
            elif token in [BKITParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(BKITParser.Var_declContext,0)


        def many_var_decl(self):
            return self.getTypedRuleContext(BKITParser.Many_var_declContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_many_var_decl




    def many_var_decl(self):

        localctx = BKITParser.Many_var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_many_var_decl)
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.var_decl()
                self.state = 126
                self.many_var_decl()
                pass
            elif token in [BKITParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def var_lst(self):
            return self.getTypedRuleContext(BKITParser.Var_lstContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_var_decl




    def var_decl(self):

        localctx = BKITParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(BKITParser.VAR)
            self.state = 132
            self.match(BKITParser.COLON)
            self.state = 133
            self.var_lst()
            self.state = 134
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_lstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(BKITParser.VarContext,0)


        def many_var(self):
            return self.getTypedRuleContext(BKITParser.Many_varContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var_lst




    def var_lst(self):

        localctx = BKITParser.Var_lstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_lst)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.var()
            self.state = 137
            self.many_var()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def var(self):
            return self.getTypedRuleContext(BKITParser.VarContext,0)


        def many_var(self):
            return self.getTypedRuleContext(BKITParser.Many_varContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_many_var




    def many_var(self):

        localctx = BKITParser.Many_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_many_var)
        try:
            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.match(BKITParser.COMMA)
                self.state = 140
                self.var()
                self.state = 141
                self.many_var()
                pass
            elif token in [BKITParser.SEMI]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def lit(self):
            return self.getTypedRuleContext(BKITParser.LitContext,0)


        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def composite_var(self):
            return self.getTypedRuleContext(BKITParser.Composite_varContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var




    def var(self):

        localctx = BKITParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 146
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.state = 147
                self.composite_var()
                pass


            self.state = 150
            self.match(BKITParser.ASSIGN)
            self.state = 151
            self.lit()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Composite_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def dimension_lst(self):
            return self.getTypedRuleContext(BKITParser.Dimension_lstContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_composite_var




    def composite_var(self):

        localctx = BKITParser.Composite_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_composite_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(BKITParser.ID)
            self.state = 154
            self.dimension_lst()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dimension_lstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dimension(self):
            return self.getTypedRuleContext(BKITParser.DimensionContext,0)


        def many_dimension(self):
            return self.getTypedRuleContext(BKITParser.Many_dimensionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_dimension_lst




    def dimension_lst(self):

        localctx = BKITParser.Dimension_lstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_dimension_lst)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.dimension()
            self.state = 157
            self.many_dimension()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_dimensionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dimension(self):
            return self.getTypedRuleContext(BKITParser.DimensionContext,0)


        def many_dimension(self):
            return self.getTypedRuleContext(BKITParser.Many_dimensionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_many_dimension




    def many_dimension(self):

        localctx = BKITParser.Many_dimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_many_dimension)
        try:
            self.state = 163
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.LSB]:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.dimension()
                self.state = 160
                self.many_dimension()
                pass
            elif token in [BKITParser.BODY, BKITParser.ASSIGN, BKITParser.COMMA]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(BKITParser.LSB, 0)

        def INT_LIT(self):
            return self.getToken(BKITParser.INT_LIT, 0)

        def RSB(self):
            return self.getToken(BKITParser.RSB, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_dimension




    def dimension(self):

        localctx = BKITParser.DimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_dimension)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(BKITParser.LSB)
            self.state = 166
            self.match(BKITParser.INT_LIT)
            self.state = 167
            self.match(BKITParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declar_lstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self):
            return self.getTypedRuleContext(BKITParser.Func_declContext,0)


        def many_func_decl(self):
            return self.getTypedRuleContext(BKITParser.Many_func_declContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_declar_lst




    def func_declar_lst(self):

        localctx = BKITParser.Func_declar_lstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_func_declar_lst)
        try:
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.func_decl()
                self.state = 170
                self.many_func_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self):
            return self.getTypedRuleContext(BKITParser.Func_declContext,0)


        def many_func_decl(self):
            return self.getTypedRuleContext(BKITParser.Many_func_declContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_many_func_decl




    def many_func_decl(self):

        localctx = BKITParser.Many_func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_many_func_decl)
        try:
            self.state = 179
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.func_decl()
                self.state = 176
                self.many_func_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def func_name(self):
            return self.getTypedRuleContext(BKITParser.Func_nameContext,0)


        def body(self):
            return self.getTypedRuleContext(BKITParser.BodyContext,0)


        def func_param(self):
            return self.getTypedRuleContext(BKITParser.Func_paramContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_decl




    def func_decl(self):

        localctx = BKITParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.match(BKITParser.FUNCTION)
            self.state = 182
            self.match(BKITParser.COLON)
            self.state = 183
            self.func_name()
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 184
                self.func_param()


            self.state = 187
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_func_name




    def func_name(self):

        localctx = BKITParser.Func_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_func_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(BKITParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_paramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def param_lst(self):
            return self.getTypedRuleContext(BKITParser.Param_lstContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_param




    def func_param(self):

        localctx = BKITParser.Func_paramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_func_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.match(BKITParser.PARAMETER)
            self.state = 192
            self.match(BKITParser.COLON)
            self.state = 193
            self.param_lst()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_lstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(BKITParser.ParamContext,0)


        def many_params(self):
            return self.getTypedRuleContext(BKITParser.Many_paramsContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_param_lst




    def param_lst(self):
